# gitpod_demo

./: .gitpod.Dockerfile  .gitpod.yml  README.md  notebook.ipynb  pyproject.toml  requirements.txt
public/: foo.geojson  index.html  server.py  stylesheet.css
