[tool.poetry]
name = "gitpod-demo"
version = "0.0.1"
description = "I use this project to learn how to configure a GitPod workspace for JupyterNotebooks and plotting with python"
authors = ["Stefan Eidelloth"]

[tool.poetry.dependencies]
python = "3.10.2"
matplotlib = "3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"